--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Code Checkout
-        uses: actions/checkout
+        uses: actions/checkout@v3
       
       - name: Setup python
         uses: actions/setup-python@v3
