--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,6 @@ jobs:
 
       - name: Run tests
         run: python tests.py
+
+      - name: Code Linting
+        run: flake8 . --select=E9,F63,F7,F82
